# plantive-ecosystem

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md
ai-service/: README.md  pyproject.toml  requirements.txt
ai-service/app/: main.py
ai-service/app/api/: router.py  routes_chat.py  routes_disease.py  routes_recommendation.py
ai-service/app/config/: settings.py
ai-service/app/models/: request_models.py  response_models.py
ai-service/app/services/: chat_service.py  fertilizer_service.py
ai-service/app/utils/: logger.py
ai-service/data/processed/: processed_dataset.csv
ai-service/data/raw/: rooftop_garden_fertilizer_dataset.csv
ai-service/data/scripts/: script.py
ai-service/ml_models/: README.md
ai-service/notebooks/: model_training.ipynb  preprocessed_data.ipynb  top_k_shows.ipynb
backend/: .env.example  README.md  main.py  pyproject.toml
backend/api-test/: opencollection.yml
backend/api-test/Auth/: create_user.yml  login.yml  logout.yml  refresh_token.yml
backend/api-test/Plants/: add_plant.yml  delete_plant.yml  folder.yml  get_all_plants.yml  get_plant.yml  search_plant.yml  temp.yml  update_plant.yml
backend/api-test/environments/: Local.yml
backend/app/config/: database.py  jwt.py  settings.py
backend/app/constants/: community_constant.py  marketplace_constant.py  permissions_constant.py  plant_constant.py  roles_constant.py  security_headers.py  token_constant.py  user_constant.py
backend/app/controllers/: auth_controller.py  plant_controllers.py
backend/data/: plants.json
backend/migrations/: README  README.md  env.py
(+82 files in other folders)
