[project]
name = "ai-service"
version = "0.1.0"
description = "A recommendation system using Random Forest"
readme = "README.md"
requires-python = ">=3.12,<3.13"

dependencies = [
    "fastapi==0.115.6",
    "uvicorn==0.30.6",
    "numpy==2.0.2",
    "pandas==2.2.2",
    "scikit-learn==1.6.1",
    "joblib==1.5.3",
    "pydantic==2.10.6",
    "pydantic-settings==2.7.1"
]

[build-system]
requires = ["setuptools>=65.5.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]